alteração no header e adicionado menu hamburguer

--- a/css/body_farmacia_carrossell.css
+++ b/css/body_farmacia_carrossell.css
@@ -32,7 +32,7 @@ main{
 
 .slide{
   width: 25%;
-  position: relative;
+  /* position: relative;*/
   transition: 2s;
 }
 
@@ -124,14 +124,13 @@ main{
   background-color: rgb(237, 35, 35);
 }
 
-
-
 @media  (max-width:741px){
 
   .slide{
     width: 25%;
     height: 20vh;
-
+    /* position: relative;*/
+    transition: 2s;
   }
  
   .nav_auto div {
@@ -142,4 +141,10 @@ main{
   .label_nav{
     display: none;
   }
+
+  main{
+    margin-top: 155px;
+    
+  }
 }
+
