--- a/css/body_variedades_carrossel.css
+++ b/css/body_variedades_carrossel.css
@@ -28,7 +28,7 @@ main{
   
 .slide{
   width: 25%;
-  position: relative;
+  /* position: relative;*/
   transition: 2s;
 }
   
@@ -114,18 +114,25 @@ main{
 }
   
 @media  (max-width:741px){
+
+  .slide{
+    width: 25%;
+    height: 20vh;
+     /* position: relative;*/
+    transition: 2s;
+  }
+ 
+  .nav_auto div {
+    display: none;
   
-.slide{
-  width: 25%;
-  height: 20vh;
-}
-   
-.nav_auto div {
-  display: none;
-}
-  
-.label_nav{
-  display: none;
+  }
+
+  .label_nav{
+    display: none;
+  }
+
+  main{
+    margin-top: 155px;
+    
   }
 }
-  
