atualização header e hamburguer no pet e variedades

--- a/css/body_farmacia_carrossell.css
+++ b/css/body_farmacia_carrossell.css
@@ -32,7 +32,7 @@ main{
 
 .slide{
   width: 25%;
-  position: relative;
+  /* position: relative;*/
   transition: 2s;
 }
 
@@ -129,7 +129,7 @@ main{
   .slide{
     width: 25%;
     height: 20vh;
-    position: relative;
+    /* position: relative;*/
     transition: 2s;
   }
  
@@ -140,5 +140,10 @@ main{
 
   .label_nav{
     display: none;
+  }
+
+  main{
+    margin-top: 155px;
+    
   }
 }
