--- a/css/body_home_carrossel.css
+++ b/css/body_home_carrossel.css
@@ -33,7 +33,7 @@ main{
 
 .slide{
   width: 25%;
-  position: relative;
+ /* position: relative;*/
   transition: 2s;
 }
 
@@ -130,7 +130,7 @@ main{
   .slide{
     width: 25%;
     height: 26vh;
-    position: relative;
+   /* position: relative;*/
     transition: 2s;
   }
  
@@ -142,4 +142,18 @@ main{
   .label_nav{
     display: none;
   }
+
+  main{
+    margin-top: 155px;
+    
+  }
+}
+
+@media (max-width:795px) and (min-width:742px){
+ 
+  main{
+    margin-top: 155px;
+    
+  }
+
 }
