--- a/css/body_pet.css
+++ b/css/body_pet.css
@@ -135,13 +135,9 @@ main{
   padding-bottom: 2%;
   border-radius: 10px;
   width: 100%;
-  height: 40%;
- 
 }
 .container img{
   width: 100%;
-  height: 22em;
-
 }
 .card{
 	color: black;
@@ -151,7 +147,6 @@ main{
   background-color: #ffffff;
   padding-bottom: 2%;
   width: 30%;
-  height: 90%;
 }
 .card:hover{
   box-shadow: 0px 1px 20px #a81e1e ;
@@ -197,10 +192,21 @@ main{
   .slide{
     width: 25%;
     height: 22vh;
-     /* position: relative;*/
     transition: 2s;
   }
- 
+  .container{
+    flex-direction: column;
+    align-items: center;
+    margin-top: 10px;
+  }
+  .container img{
+    width: 100%;
+  }
+ .card{
+  width: 80%;
+  margin-top:3%;
+  margin-bottom: 7%;
+ }
   .nav_auto div {
     display: none;
   
