--- a/css/body_pet.css
+++ b/css/body_pet.css
@@ -128,10 +128,7 @@ main{
 
 /* ============================================================================ */
 
-main{
-  width: 1200px;
-  margin: 0 auto;
-}
+
 .container{
   display: flex;
   justify-content: space-around;
@@ -139,9 +136,10 @@ main{
   padding-top:2% ;
   padding-bottom: 2%;
   border-radius: 10px;
-  margin: 1.5% 1%;
+  margin-top: 2%;
   width: 100%;
   height: 40%;
+  
 }
 .container img{
   width: 100%;
