criando rota farmacia e atualizando as pastas no padrão MVC

--- a/src/views/body/farmacia.ejs
+++ b/src/views/body/farmacia.ejs
@@ -7,12 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grupo Seven / Farmácia</title>
     <script src="https://kit.fontawesome.com/4d88c7f41d.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/body_farmacia.css">
-    <link rel="stylesheet" href="css/body_farmacia_carrossell.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/menu_hamburguer.css">
-
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/body_farmacia_carrossell.css">
+    <link rel="stylesheet" href="/css/body_farmacia.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/menu_hamburguer.css">
 </head>
 
 <body>
@@ -22,8 +21,8 @@
     <section class="primeiro_cabecalho">
       
       <article class="imagem_logo">
-          <a href="/home.html">
-              <img class="imagem_logo_img" src="/imagens/Grupo Seven 2.PNG" alt="Logo da empresa" >
+        <a href=#home>
+              <img class="imagem_logo_img" src="/img/Grupo Seven 2.PNG" alt="Logo da empresa" >
           </a>
       </article>
    
@@ -41,7 +40,7 @@
        
           <form class="form_primeiro_cabecalho2" action="#" method="post">
             
-            <a class="botao2"  href="/formulario.html">  <i id="bota2_i" class="fa-solid fa-user"></i></a>
+            <a class="botao2"  href="/body/formulario.ejs">  <i id="bota2_i" class="fa-solid fa-user"></i></a>
               <!--a tag "i" estou utilizando o icone do fontawesome.com -->
     
           </form>
@@ -63,7 +62,6 @@
   </section>
 
 
-
     <section class="segunda_cabecalho">
 
       <article class="link">
@@ -72,11 +70,11 @@
 
        <article class="abas">
 
-        <a class="tagA_segundo_cabecalho"  href="/variedades.html">
+        <a class="tagA_segundo_cabecalho"  href="variedades.html">
              <p class="mercado"><strong>Variedades</strong>  </p> 
         </a>
 
-        <a class="tagA_segundo_cabecalho"  href="/pet.html">
+        <a class="tagA_segundo_cabecalho"  href="pet.html">
              <p class="pet"><strong>Espaço pet</strong> </p>
         </a>
 
@@ -142,24 +140,24 @@
 
             <!--inicio slide imagens---------------------------------------------------------------------------------->
             <div class="slide first">
-                <img src="/imagens/carrossell_imagem1_farmacia.png" alt="imagem 1">
+                <img src="/img/carrossell_imagem1_farmacia.png" alt="imagem 1">
             </div>
 
             <div class="slide">
-              <img src="imagens/carrossell_imagem2_farmacia.webp" alt="imagem 2">
+              <img src="/img/carrossell_imagem2_farmacia.webp" alt="imagem 2">
             </div>
 
             <div class="slide">
-              <img src="imagens/carrossel_imagem3_farmacia.png" alt="imagem 3">
+              <img src="/img/carrossel_imagem3_farmacia.png" alt="imagem 3">
             </div>
 
             <div class="slide">
-              <img src="/imagens/carrossell_imagem4_farmacia.png" alt="imagem 4">
+              <img src="/img/carrossell_imagem4_farmacia.png" alt="imagem 4">
             </div>
             <!--fim slide imagens--------------------------------------------------------------------------------------->
 
 
-            <!-- inicio navegação automatica---------------------------------------------------------------------------->
+            <!-- inicio navegação automatica-deixa a bolinha fixa-------------------------------------------------------->
             <div class="nav_auto">
 
               <div class="auto_btn1"></div>
@@ -183,61 +181,61 @@
 
 
 
-      <!-- inicio primeiro block de imagens---------------------------------------------------------------------------->
+        <!-- inicio primeiro block de imagens---------------------------------------------------------------------------->
     
       <section class="elementoUm_article" >
 
-        <div class="elementoUm_article_div" >
-            <img class = "img_elementoUm_article_div" src="imagens/imagem_farmacia1.jpg" alt="">
-            <p>Dipirona 500mg ,240 comprimidos</p>
-            <P>R$ 17,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
-        </div>
+          <div class="elementoUm_article_div" >
+              <img class = "img_elementoUm_article_div" src="/img/imagem_farmacia1.jpg" alt="">
+              <p>Dipirona 500mg ,240 comprimidos</p>
+              <P>R$ 17,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
+          </div>
 
-        <div class="elementoUm_article_div" >
-            <img class = "img_elementoUm_article_div" src="imagens/imagem_farmacia2.jpg" alt="">
-            <p>Paracetamol 750mg ,20 comprimidos</p>
-            <P>R$ 19,70</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
-        </div>
+          <div class="elementoUm_article_div" >
+              <img class = "img_elementoUm_article_div" src="/img/imagem_farmacia2.jpg" alt="">
+              <p>Paracetamol 750mg,20 comprimidos</p>
+              <P>R$ 19,70</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
+          </div>
 
-        <div class="elementoUm_article_div" id="block_4_imagens_space">
-            <img class = "img_elementoUm_article_div" src="imagens/imagem_farmacia3.jpg" alt="">
-            <p>Novanoite 320mg , 10 comprimidos</p>
-            <P>R$ 25,99</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
-        </div>
+          <div class="elementoUm_article_div" id="block_4_imagens_space">
+              <img class = "img_elementoUm_article_div" src="/img/imagem_farmacia3.jpg" alt="">
+              <p>Novanoite 320mg , 10 comprimidos</p>
+              <P>R$ 25,99</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
+          </div>
 
-    </section>
+      </section>
 
 <!-- fim primeiro block de imagens---------------------------------------------------------------------------->
 
 <!-- inicio segundo block de imagens---------------------------------------------------------------------------->
 
-  <section class="elementoDois_article" >
+    <section class="elementoDois_article" >
 
-      <div class="elementoDois_article_div" >
-          <img class = "img_elementoDois_article_div" src="imagens/imagem_farmacia4.jpg" alt="">
-          <p>Imecap hair max , 30 cápsulas</p>
-          <P>R$ 79,90</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
-      </div>
+        <div class="elementoDois_article_div" >
+            <img class = "img_elementoDois_article_div" src="/img/imagem_farmacia4.jpg" alt="">
+            <p>Imecap hair max , 30 cápsulas</p>
+            <P>R$ 79,90</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
+        </div>
 
-      <div class="elementoDois_article_div" >
-          <img class = "img_elementoDois_article_div" src="imagens/imagem_farmacia5.jpg" alt="">
-          <p>Natucor preto</p>
-          <P>R$ 16,90</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
-      </div>
+        <div class="elementoDois_article_div" >
+            <img class = "img_elementoDois_article_div" src="/img/imagem_farmacia5.jpg" alt="">
+            <p>Natucor preto</p>
+            <P>R$ 16,90</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
+        </div>
 
-      <div class="elementoDois_article_div" id="block_4_imagens_space">
-          <img class = "img_elementoDois_article_div" src="imagens/imagem_farmacia6.jpg" alt="">
-          <p>Tio Nacho engrossador</p>
-          <P>R$ 19,99</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
-      </div>
+        <div class="elementoDois_article_div" id="block_4_imagens_space">
+            <img class = "img_elementoDois_article_div" src="/img/imagem_farmacia6.jpg" alt="">
+            <p>Tio Nacho engrossador</p>
+            <P>R$ 19,99</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
+        </div>
 
-  </section>
+    </section>
 
 <!-- fim segundo block de imagens---------------------------------------------------------------------------->
 
 
-
 </main>
+
 
 
 <footer>
@@ -246,7 +244,7 @@
   
     <article class="imagem_logo2">
         <a href="/home.html">
-            <img class="imagem2" src="/imagens/Grupo Seven 2.PNG" alt="Logo da empresa"  >
+            <img class="imagem2" src="/img/Grupo Seven 2.PNG" alt="Logo da empresa"  >
         </a>
     </article>
 
@@ -318,9 +316,8 @@
   <a target="_blank" href="https://wa.me/+5511966471637?text=Olá tudo bem ? "><i id="whats" class="fa-brands fa-whatsapp-square"></i></a>
   </div>-->
 
-
-<script src="js/farmacia.js"></script>
-<script src="js/menu_hamburguer.js"></script>
+<script src="/js/farmacia.js"></script>
+<script src="/js/menu_hamburguer.js"></script>
 
 </body>
 
