--- a/src/views/body/pet.ejs
+++ b/src/views/body/pet.ejs
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Grupo Seven / Espaço pet</title>
   <script src="https://kit.fontawesome.com/4d88c7f41d.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="css/header.css">
-  <link rel="stylesheet" href="css/body_pet.css">
-  <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="/css/header.css">
+  <link rel="stylesheet" href="/css/body_pet.css">
+  <link rel="stylesheet" href="/css/footer.css">
   <link rel="stylesheet" href="/css/menu_hamburguer.css">
 
 </head>
@@ -21,8 +21,8 @@
     <section class="primeiro_cabecalho">
       
       <article class="imagem_logo">
-          <a href="/home.html">
-              <img class="imagem_logo_img" src="/imagens/Grupo Seven 2.PNG" alt="Logo da empresa" >
+          <a href="home.html">
+              <img class="imagem_logo_img" src="/img/Grupo Seven 2.PNG" alt="Logo da empresa" >
           </a>
       </article>
    
@@ -40,7 +40,7 @@
        
           <form class="form_primeiro_cabecalho2" action="#" method="post">
             
-            <a class="botao2"  href="/formulario.html">  <i id="bota2_i" class="fa-solid fa-user"></i></a>
+            <a class="botao2"  href="formulario.html">  <i id="bota2_i" class="fa-solid fa-user"></i></a>
               <!--a tag "i" estou utilizando o icone do fontawesome.com -->
     
           </form>
@@ -71,13 +71,13 @@
 
       <article class="abas">
 
-        <a class="tagA_segundo_cabecalho" href="/variedades.html">
+        <a class="tagA_segundo_cabecalho" href="variedades.html">
           <p class="mercado"><strong> Variedades</strong> </p>
         </a>
 
         <p class="pet" id="pag_pet"><strong>Espaço pet </strong> </p>
 
-        <a class="tagA_segundo_cabecalho" href="/farmacia.html">
+        <a class="tagA_segundo_cabecalho" href="farmacia.html">
           <p class="farmacia"><strong>Farmácia </strong> </p>
         </a>
 
@@ -98,9 +98,9 @@
         <li class="lista_label_hambuerguer">
           Variedades
            <ul >
-            <a href="/variedades.html"> <li>Eletrônicos</li></a>
-            <a href="/variedades.html"> <li>Móveis</li></a>
-            <a href="/variedades.html"><li>Roupas</li></a>
+            <a href="variedades.html"> <li>Eletrônicos</li></a>
+            <a href="variedades.html"> <li>Móveis</li></a>
+            <a href="variedades.html"><li>Roupas</li></a>
            </ul>
         </li>
 
@@ -140,19 +140,19 @@
 
         <!--inicio slide imagens---------------------------------------------------------------------------------->
         <div class="slide first">
-          <img width="100%" height="500" src="imagens\carrosel-pet1.webp" alt="imagem 1">
+          <img width="100%" height="500" src="/img/carrosel-pet1.webp" alt="imagem 1">
         </div>
 
         <div class="slide">
-          <img src="imagens\carrosel-pet5.webp" alt="imagem 2">
+          <img src="/img/carrosel-pet5.webp" alt="imagem 2">
         </div>
 
         <div class="slide">
-          <img src="imagens\carrosel-pet4.webp" alt="imagem 3">
+          <img src="/img/carrosel-pet4.webp" alt="imagem 3">
         </div>
 
         <div class="slide">
-          <img src="imagens\carrosel-pet2.webp" alt="imagem 4">
+          <img src="/img/carrosel-pet2.webp" alt="imagem 4">
         </div>
         <!--fim slide imagens--------------------------------------------------------------------------------------->
 
@@ -183,7 +183,7 @@
     <section class="container">
 
       <div class="card">
-        <img id="bolsaPet" alt="" src="imagens\bolsaPet.jpg" complete="complete">
+        <img id="bolsaPet" alt="" src="/img/bolsaPet.jpg" complete="complete">
         <div class="descricao">
           <p>Bolsa pet</p>
           <P>R$ 140,00</P>
@@ -193,7 +193,7 @@
       </div>
       <div class="card">
         <div class="box-banner">
-          <img id="caminhaPet" alt="" src="imagens\caminhaPet.webp" complete="complete">
+          <img id="caminhaPet" alt="" src="/img/caminhaPet.webp" complete="complete">
           <div class="descricao">
             <p>Caminha pet</p>
             <P>R$ 190,00</P>
@@ -204,7 +204,7 @@
       </div>
       <div class="card">
         <div class="box-banner">
-          <img src="imagens\casinhaPet.jpg" complete="complete">
+          <img src="/img/casinhaPet.jpg" complete="complete">
           <div class="descricao">
             <p>Casinha pet</p>
             <P>R$ 200,00</P>
@@ -220,7 +220,7 @@
 
     <section class="container">
       <div class="card">
-        <img id="" alt="" src="imagens\tigela_gato.webp" complete="complete">
+        <img id="" alt="" src="/img/tigela_gato.webp" complete="complete">
         <div class="descricao">
           <p>Tigela para gato</p>
           <P>R$ 20,00</P>
@@ -230,7 +230,7 @@
         <button class="carrinho">Carrinho</button>
       </div>
       <div class="card">
-        <img id="" alt="" src="imagens\racao-gato.jpg" complete="complete">
+        <img id="" alt="" src="/img/racao-gato.jpg" complete="complete">
         <div class="descricao">
           <p>Ração para Gato</p>
           <P>R$ 50,00</P>
@@ -239,7 +239,7 @@
         <button class="carrinho">Carrinho</button>
       </div>
       <div class="card">
-        <img id="" alt="" src="imagens\racao-premier-caes-adultos.webp" complete="complete">
+        <img id="" alt="" src="/img/racao-premier-caes-adultos.webp" complete="complete">
         <div class="descricao">
           <p>Ração premium</p>
           <P>R$ 80,00</P>
@@ -262,8 +262,8 @@
     <section class="footer_all">
   
       <article class="imagem_logo2">
-          <a href="/home.html">
-              <img class="imagem2" src="/imagens/Grupo Seven 2.PNG" alt="Logo da empresa"  >
+          <a href="home.html">
+              <img class="imagem2" src="/img/Grupo Seven 2.PNG" alt="Logo da empresa"  >
           </a>
       </article>
   
@@ -336,8 +336,8 @@
     </div>-->
 
 
-    <script src="js/pet.js"></script>
-    <script src="js/menu_hamburguer.js"></script>
+    <script src="/js/pet.js"></script>
+    <script src="/js/menu_hamburguer.js"></script>
 
 </body>
 
