--- a/src/views/body/variedades.ejs
+++ b/src/views/body/variedades.ejs
@@ -5,15 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grupo Seven</title>
+    <title>Grupo Seven / Mercado</title>
     <script src="https://kit.fontawesome.com/4d88c7f41d.js" crossorigin="anonymous"></script>
-    <!--esse script é gerado pelo fontawesome.com que gera icones -->
-
     <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/body_variedades.css">
     <link rel="stylesheet" href="/css/footer.css">
-    <link rel="stylesheet" href="/css/body_home.css">
-    <link rel="stylesheet" href="/css/body_home_carrossel.css">
-    <link rel="stylesheet" href="css/menu_hamburguer.css">
+    <link rel="stylesheet" href="/css/body_variedades_carrossel.css">
+    <link rel="stylesheet" href="/css/menu_hamburguer.css">
 
 </head>
 
@@ -21,12 +19,11 @@
   
   <header>
 
-    
     <section class="primeiro_cabecalho">
       
       <article class="imagem_logo">
           <a href="/home.html">
-              <img class="imagem_logo_img" src="imagens/Grupo Seven 2.PNG" alt="Logo da empresa" >
+              <img class="imagem_logo_img" src="/img/Grupo Seven 2.PNG" alt="Logo da empresa" >
           </a>
       </article>
    
@@ -44,7 +41,7 @@
        
           <form class="form_primeiro_cabecalho2" action="#" method="post">
             
-            <a class="botao2"  href="/formulario.html">  <i id="bota2_i" class="fa-solid fa-user"></i></a>
+            <a class="botao2"  href="formulario.html">  <i id="bota2_i" class="fa-solid fa-user"></i></a>
               <!--a tag "i" estou utilizando o icone do fontawesome.com -->
     
           </form>
@@ -65,41 +62,36 @@
                 
   </section>
 
-      <section class="segunda_cabecalho">
 
-        <article class="link">
+    <section class="segunda_cabecalho">
 
-          <a id="button_menu"> <i class="fa-solid fa-list"></i></a> <p class="texto_nav"> Navegue aqui</p>  
+      <article class="link">
+        <a id="button_menu"> <i class="fa-solid fa-list"></i></a> <p class="texto_nav"> Navegue aqui</p> 
+      </article>
 
+       <article class="abas">
 
-        </article>
+           <p class="mercado" id ="pag_mercado"><strong>Variedades</strong> </p> 
+           
+          <a class="tagA_segundo_cabecalho"  href="pet.html">
+               <p class="pet"><strong>Espaço pet</strong> </p>
+          </a>
 
-         <article class="abas">
+          <a class="tagA_segundo_cabecalho"  href="farmacia.html">
+               <p class="farmacia"><strong>Farmácia </strong> </p>
+          </a>
 
-          
-            <a class="tagA_segundo_cabecalho"  href="/variedades.html">
-                   <p class="mercado"><strong>Variedades</strong>  </p> 
-            </a>
+            <p class="oferta"><strong>Ofertas </strong> </p>
 
-            <a class="tagA_segundo_cabecalho"  href="pet.html">
-                    <p class="pet"><strong>Espaço pet</strong> </p>
-            </a>
-
-            <a class="tagA_segundo_cabecalho"  href="/farmacia.html">
-              <p class="farmacia"><strong>Farmácia </strong> </p>
-            </a>
-
-              <p class="oferta"><strong>Ofertas </strong> </p>
-
-         </article>
+       </article>
 
 
-      </section>
+
+    </section>
 
 
   </header>
-
-
+  
   <section class="body_menu_hamburguer" ></section>
   <div class="menu_hamburguer" id="menu_hamburguer">
     
@@ -135,8 +127,7 @@
 
   <main>
 
-        
-       
+   
     <section class="slider"> <!--carrosel de imagens do site parte superior --------------------------------------------->
         
       <article class="slides"> 
@@ -151,24 +142,24 @@
 
           <!--inicio slide imagens---------------------------------------------------------------------------------->
           <div class="slide first">
-              <img src="imagens/imagem_carrossel_home.webp" alt="imagem 1">
+              <img src="/img/carrossell_imagem1_farmacia.png" alt="imagem 1">
           </div>
 
           <div class="slide">
-            <img src="imagens\carrosel-pet5.webp" alt="imagem 2">
+            <img src="/img/carrossell_imagem2_farmacia.webp" alt="imagem 2">
           </div>
 
           <div class="slide">
-            <img src="imagens/carrossel_imagem3_farmacia.png" alt="imagem 3">
+            <img src="/img/carrossel_imagem3_farmacia.png" alt="imagem 3">
           </div>
 
           <div class="slide">
-            <img src="imagens/carrossell_imagem4_farmacia.png" alt="imagem 4">
+            <img src="/img/carrossell_imagem4_farmacia.png" alt="imagem 4">
           </div>
           <!--fim slide imagens--------------------------------------------------------------------------------------->
 
 
-          <!-- inicio navegação automatica-deixa a bolinha fixa-------------------------------------------------------->
+          <!-- inicio navegação automatica---------------------------------------------------------------------------->
           <div class="nav_auto">
 
             <div class="auto_btn1"></div>
@@ -190,113 +181,99 @@
       
     </section> <!-- fim carrosel de imagens do site parte superior ---------------------------------------------------->
 
-   <section class="cabecalho_imagens">
-      <div>
-        <p>Variedades </p> <i class="fa-solid fa-shop"></i>
-      </div>
-   </section>
-    <!-- inicio primeiro block de imagens---------------------------------------------------------------------------->
-     
-      <section class="elementoUm_article" >
 
-          <div class="elementoUm_article_div" >
-              <img class = "img_elementoUm_article_div" src="imagens/imagem_variedades1.png" alt="">
-              <p> Samsung S20 128GB</p>
-              <P>R$ 1.799,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
-          </div>
 
-          <div class="elementoUm_article_div" >
-              <img class = "img_elementoUm_article_div" src="imagens/imagem_variedades2.png" alt="">
-              <p>Mochila Hang Loose</p>
-              <P>R$ 159,90</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
-          </div>
+        <section>
 
-          <div class="elementoUm_article_div" id="block_4_imagens_space">
-              <img class = "img_elementoUm_article_div" src="imagens/imagem_variedades3.png" alt="">
-              <p>Xiaomi mi robot Vacuum</p>
-              <P>R$ 2.910,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
-          </div>
+            <!--corpo com imagens e detalhes com texto etc...-->
+            <section class="products">
+              <div class="products1">
+                  <!--corpo com imagens e detalhes com texto etc...-->
+                  <div>
+                    <img id="imgsize" src="/img/variedades.png" alt="">
+                    <ul>
+                      <li>Nome do produto</li>
+                      <li>Preço</li>
+                      <li>Pré descrição do produto</li>
+                      <button type="submit">Comprar</button>
+                      <button type="submit">Carrinho</button>
+                    </ul>
+                    
+                  </div>
+                  <div>
+                    <img id="imgsize" src="/img/variedades.png" alt="">
+                    <ul>
+                      <li>Nome do produto</li>
+                      <li>Preço</li>
+                      <li>Pré descrição do produto</li>
+                      <button type="submit">Comprar</button>
+                      <button type="submit">Carrinho</button>
+                    </ul>
+                  </div>
+                  <div>
+                    <img id="imgsize" src="/img/variedades.png" alt="">
+                    <ul>
+                      <li>Nome do produto</li>
+                      <li>Preço</li>
+                      <li>Pré descrição do produto</li>
+                      <button type="submit">Comprar</button>
+                      <button type="submit">Carrinho</button>
+                    </ul>
+                  </div>
+              </div>
+    
+              <div class="products2">
+                <div>
+                  <img id="imgsize" src="/img/variedades.png" alt="">
+                  <ul>
+                    <li>Nome do produto</li>
+                    <li>Preço</li>
+                    <li>Pré descrição do produto</li>
+                    <button type="submit">Comprar</button>
+                    <button type="submit">Carrinho</button>
+                  </ul>
+                </div>
+    
+                <div>
+                  <img id="imgsize" src="/img/variedades.png" alt="">
+                  <ul>
+                    <li>Nome do produto</li>
+                    <li>Preço</li>
+                    <li>Pré descrição do produto</li>
+                    <button type="submit">Comprar</button>
+                    <button type="submit">Carrinho</button>
+                  </ul>
+                </div>
+    
+                <div>
+                  <img id="imgsize" src="/img/variedades.png" alt="">
+                  <ul>
+                    <li>Nome do produto</li>
+                    <li>Preço</li>
+                    <li>Pré descrição do produto</li>
+                    <button type="submit">Comprar</button>
+                    <button type="submit">Carrinho</button>
+                  </ul>
+                </div>
+              </div>
+                
+            </section> 
 
-      </section>
-
-<!-- fim primeiro block de imagens---------------------------------------------------------------------------->
-
-    <section class="cabecalho_imagens2">
-      <div>
-        <p>Espaço pet</p><i class="fa-solid fa-paw"></i> 
-      </div>
-    </section>
-
-    <!-- Segundo  block de imagens---------------------------------------------------------------------------->
-     
-      <section class="elementoDois_article" >
-
-          <div class="elementoDois_article_div" >
-              <img class = "img_elementoDois_article_div" src="/imagens/tigela_gato.webp" alt="">
-              <p>Tigela para gato</p>
-              <P>R$ 20,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
-          </div>
-
-          <div class="elementoDois_article_div" >
-              <img class = "img_elementoDois_article_div" src="imagens/casinhaPet.jpg" alt="">
-              <p>Casinha pet</p>
-              <P>R$ 200,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
-          </div>
-
-          <div class="elementoDois_article_div" id="block_4_imagens_space">
-              <img class = "img_elementoDois_article_div" src="imagens/caminhaPet.webp" alt="">
-              <p>Caminha pet</p>
-              <P>R$ 190,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
-          </div>
-
-      </section>
-
-<!-- fim segundo block de imagens---------------------------------------------------------------------------->
-
-<section class="cabecalho_imagens3">
-  <div>
-    <p>Farmácia</p><i class="fa-solid fa-house-chimney-medical"></i>
-  </div>
-</section>
-
-<!-- terceiro block de imagens---------------------------------------------------------------------------->
- 
-  <section class="elementoTres_article" >
-
-      <div class="elementoTres_article_div" >
-          <img class = "img_elementoTres_article_div" src="imagens/imagem_farmacia1.jpg" alt="">
-          <p>Dipirona 500mg ,240 comprimidos</p>
-          <P>R$ 17,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
-      </div>
-
-      <div class="elementoTres_article_div" >
-          <img class = "img_elementoTres_article_div" src="imagens/imagem_farmacia2.jpg" alt="">
-          <p>Paracetamol 750mg ,20 comprimidos</p>
-          <P>R$ 19,70</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
-      </div>
-
-      <div class="elementoTres_article_div" id="block_4_imagens_space">
-          <img class = "img_elementoTres_article_div" src="imagens/imagem_farmacia3.jpg" alt="">
-          <p>Novanoite 320mg , 10 comprimidos</p>
-          <P>R$ 25,99</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
-      </div>
-
-  </section>
-
-<!-- fim terceiro block de imagens---------------------------------------------------------------------------->
+        </section>
 
 
 
-  </main>
+</main>
 
 
- <footer>
-   
+
+<footer>
+
   <section class="footer_all">
-  
+
     <article class="imagem_logo2">
-        <a href="/home.html">
-            <img class="imagem2" src="/imagens/Grupo Seven 2.PNG" alt="Logo da empresa"  >
+        <a href="home.html">
+            <img class="imagem2" src="/img/Grupo Seven 2.PNG" alt="Logo da empresa"  >
         </a>
     </article>
 
@@ -362,20 +339,16 @@
 
  </footer>
  
-
+ <script src="/js/variedades.js"></script>
+ <script src="/js/menu_hamburguer.js"></script>
+ 
    <!--<div class="whatsapp">
   <p>Duvidas ?</p>
   <a target="_blank" href="https://wa.me/+5511966471637?text=Olá tudo bem ? "><i id="whats" class="fa-brands fa-whatsapp-square"></i></a>
   </div>-->
 
-     
 
- </footer>
-
- <script src="js/home.js"></script>
- <script src="js/menu_hamburguer.js"></script>
 </body>
 
 
 </html>
-
