--- a/src/views/body/formulario.ejs
+++ b/src/views/body/formulario.ejs
@@ -10,8 +10,8 @@
     <script src="https://kit.fontawesome.com/4d88c7f41d.js" crossorigin="anonymous"></script>
     <!--esse script é gerado pelo fontawesome.com que gera icones -->
 
-    <link rel="stylesheet" href="css/formulario_header.css">
-    <link rel="stylesheet" href="css/formulario.css">
+    <link rel="stylesheet" href="/css/formulario_header.css">
+    <link rel="stylesheet" href="/css/formulario.css">
 
    
 </head>
@@ -24,8 +24,8 @@
     <section class="primeiro_cabecalho">
 
       <div class="imagem_logo">
-          <a href="home.html">
-              <img class="imagem" src="imagens/Grupo Seven 2.PNG" alt="Logo da empresa"  width="105%" height="100px" >
+          <a href="/home">
+              <img class="imagem" src="/img/Grupo Seven 2.PNG" alt="Logo da empresa"  width="105%" height="100px" >
           </a>
       </div>
 
@@ -60,15 +60,15 @@
          <article class="abas">
 
           
-            <a class="tagA_segundo_cabecalho"  href="variedades.html">
+            <a class="tagA_segundo_cabecalho"  href="/home/variedades">
                    <p class="mercado"><strong>Variedades</strong>  </p> 
             </a>
 
-            <a class="tagA_segundo_cabecalho"  href="pet.html">
+            <a class="tagA_segundo_cabecalho"  href="/home/pet">
                     <p class="pet"><strong>Espaço pet</strong> </p>
             </a>
 
-            <a class="tagA_segundo_cabecalho"  href="farmacia.html">
+            <a class="tagA_segundo_cabecalho"  href="/home/farmacia">
               <p class="farmacia"><strong>Farmácia </strong> </p>
             </a>
 
